Added all projects and fixed sizing

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-1-tran550/" title="Spaceship Game" width="1000" height="500" loading="lazy"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-1-tran550/" title="Spaceship Game" width="3000" height="500" loading="lazy" style="position:relative; top:55px"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h2>Sed ipsum dolor</h2>
@@ -58,7 +58,7 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-2-tran550/" title="Spaceship Game" width="1000" height="500" loading="lazy"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-2-tran550/" title="Car Soccer Game" width="3000" height="500" loading="lazy" style="position:relative; top:55px"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h2>Feugiat consequat</h2>
@@ -70,7 +70,7 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-3-tran550/" title="Spaceship Game" width="1000" height="500" loading="lazy"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-3-tran550/" title="Earthquake Simulator" width="3000" height="500" loading="lazy" style="position:relative; top:55px"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h2>Ultricies aliquam</h2>
@@ -82,7 +82,31 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-4-tran550/" title="Spaceship Game" width="1000" height="500" loading="lazy"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-4-tran550/" title="Motion Capture Simulator" width="3000" height="500" loading="lazy" style="position:relative; top:55px"></iframe>
+							<div class="content">
+								<div class="inner">
+									<h2>Ultricies aliquam</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-5-tran550/" title="Shading Simulator" width="3000" height="500" loading="lazy" style="position:relative; top:55px"></iframe>
+							<div class="content">
+								<div class="inner">
+									<h2>Ultricies aliquam</h2>
+									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<ul class="actions">
+										<li><a href="generic.html" class="button">Learn more</a></li>
+									</ul>
+								</div>
+							</div>
+						</section>
+						<section>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-6-tran550/" title="Drawing Simulator" width="3000" height="500" loading="lazy" style="position:relative; top:55px"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h2>Ultricies aliquam</h2>
