--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Home</a></li>
-							<li><a href="#one">About Me</a></li>
+							<li><a href="#intro">About Me</a></li>
+							<li><a href="#one">Projects</a></li>
 							<li><a href="#two">Skills</a></li>
-							<li><a href="#three">Projects</a></li>
+							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -34,7 +34,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
+							<h1>Brandon Tran</h1>
 							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
 							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
 							<ul class="actions">
@@ -46,10 +46,10 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-1-tran550/" title="Spaceship Game" width="3000" height="500" loading="lazy" style="position:relative; top:55px"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-1-tran550/" title="Spaceship Game" width="3000" height="500" loading="lazy" style="margin-top:auto ; margin-bottom: auto;"></iframe>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
+									<h3>Spaceship Minesweeper</h3>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -58,10 +58,10 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-2-tran550/" title="Car Soccer Game" width="3000" height="500" loading="lazy" style="position:relative; top:55px"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-2-tran550/" title="Car Soccer Game" width="3000" height="500" loading="lazy" style="margin-top:auto ; margin-bottom: auto;"></iframe>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
+									<h3>Car Soccer</h3>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -70,10 +70,10 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-3-tran550/" title="Earthquake Simulator" width="3000" height="500" loading="lazy" style="position:relative; top:55px"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-3-tran550/" title="Earthquake Simulator" width="3000" height="500" loading="lazy" style="margin-top:auto ; margin-bottom: auto;"></iframe>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
+									<h3>Earthquake Visualization</h3>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -82,10 +82,10 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-4-tran550/" title="Motion Capture Simulator" width="3000" height="500" loading="lazy" style="position:relative; top:55px"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-4-tran550/" title="Motion Capture Simulator" width="3000" height="500" loading="lazy" style="margin-top:auto ; margin-bottom: auto;"></iframe>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
+									<h3>Giraffe Motion Capture Dance Animations</h3>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -94,10 +94,10 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-5-tran550/" title="Shading Simulator" width="3000" height="500" loading="lazy" style="position:relative; top:55px"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-5-tran550/" title="Shading Simulator" width="3000" height="500" loading="lazy" style="margin-top:auto ; margin-bottom: auto;"></iframe>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
+									<h3>Shader Renderer</h3>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -106,10 +106,10 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-6-tran550/" title="Drawing Simulator" width="3000" height="500" loading="lazy" style="position:relative; top:55px"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-6-tran550/" title="Drawing Simulator" width="3000" height="500" loading="lazy" style="margin-top:auto ; margin-bottom: auto;"></iframe>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
+									<h3>3D Drawing Visualization</h3>
 									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
@@ -169,7 +169,7 @@
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
-									<iframe src="https://csci-4611-fall-2022.github.io/assignment-1-tran550/" title="Spaceship Game" width="500" height="500"></iframe>
+			
 								</section>
 								<section>
 									<ul class="contact">
@@ -181,15 +181,6 @@
 					</section>
 
 			</div>
-
-		<!-- Footer -->
-			<footer id="footer" class="wrapper style1-alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
