--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 							<li><a href="#intro">About Me</a></li>
 							<li><a href="#one">Projects</a></li>
 							<li><a href="#two">Skills</a></li>
-							<li><a href="#three">Contact</a></li>
+							<li><a href="#three">Resume</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -34,10 +34,11 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Brandon Tran</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
-							<ul class="actions">
+							<h3>Hi I'm</h3>
+							<div class="name">
+								<h1>Brandon Tran</h1>
+							</div>
+							<p>I'm a software engineer recently graduated from The University of Minnesota with a Major in Computer Science and a Minor in Mathematics. <br>I have an interest in full stack development and enjoy learning more. <br>In my free time, I enjoy traveling the world and playing volleyball.</p>
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
 						</div>
@@ -46,73 +47,73 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-1-tran550/" title="Spaceship Game" width="3000" height="500" loading="lazy" style="margin-top:auto ; margin-bottom: auto;"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-1-tran550/" title="Spaceship Game" loading="lazy" style="height: 25em; width: 100em; margin-top:auto ; margin-bottom: auto;"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h3>Spaceship Minesweeper</h3>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>TypeScript Computer Graphics and Animations Project -<br>2D graphics game utilizing GopherGfx library</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://csci-4611-fall-2022.github.io/assignment-1-tran550" class="button">Project Link</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-2-tran550/" title="Car Soccer Game" width="3000" height="500" loading="lazy" style="margin-top:auto ; margin-bottom: auto;"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-2-tran550/" title="Car Soccer Game" loading="lazy" style="height: 25em; width: 100em; margin-top:auto ; margin-bottom: auto;"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h3>Car Soccer</h3>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>TypeScript Computer Graphics and Animations Project -<br>3D graphics game utilizing GopherGfx library</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://csci-4611-fall-2022.github.io/assignment-2-tran550" class="button">Project Link</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-3-tran550/" title="Earthquake Simulator" width="3000" height="500" loading="lazy" style="margin-top:auto ; margin-bottom: auto;"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-3-tran550/" title="Earthquake Simulator" loading="lazy" style="height: 25em; width: 100em; margin-top:auto ; margin-bottom: auto;"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h3>Earthquake Visualization</h3>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>TypeScript Computer Graphics and Animations Project -<br>3D visualization of real-world earthquake data around the globe throughout the years</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://csci-4611-fall-2022.github.io/assignment-3-tran550" class="button">Project Link</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-4-tran550/" title="Motion Capture Simulator" width="3000" height="500" loading="lazy" style="margin-top:auto ; margin-bottom: auto;"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-4-tran550/" title="Motion Capture Simulator" loading="lazy" style="height: 25em; width: 100em; margin-top:auto ; margin-bottom: auto;"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h3>Giraffe Motion Capture Dance Animations</h3>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>TypeScript Computer Graphics and Animations Project -<br>Animation Program using CMU motion capture data </p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://csci-4611-fall-2022.github.io/assignment-4-tran550" class="button">Project Link</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-5-tran550/" title="Shading Simulator" width="3000" height="500" loading="lazy" style="margin-top:auto ; margin-bottom: auto;"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-5-tran550/" title="Shading Simulator" loading="lazy" style="height: 25em; width: 100em; margin-top:auto ; margin-bottom: auto;"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h3>Shader Renderer</h3>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>TypeScript Computer Graphics and Animations Project -<br>Custom GLSL Shader Program to showcase different renderings of lightings and textures</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://csci-4611-fall-2022.github.io/assignment-5-tran550" class="button">Project Link</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-6-tran550/" title="Drawing Simulator" width="3000" height="500" loading="lazy" style="margin-top:auto ; margin-bottom: auto;"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-6-tran550/" title="Drawing Simulator" loading="lazy" style="height: 25em; width: 100em; margin-top:auto ; margin-bottom: auto;"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h3>3D Drawing Visualization</h3>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<p>TypeScript Computer Graphics and Animations Project -<br>Drawing application that creates 3D objects in a world where you can move around in</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://csci-4611-fall-2022.github.io/assignment-6-tran550" class="button">Project Link</a></li>
 									</ul>
 								</div>
 							</div>
@@ -122,38 +123,31 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>My Skills</h2>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Lorem ipsum amet</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
 									<h3>Aliquam sed nullam</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
 									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 							</div>
 							<ul class="actions">
