added skills and resume

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 								<h1>Brandon Tran</h1>
 							</div>
 							<p>I'm a software engineer recently graduated from The University of Minnesota with a Major in Computer Science and a Minor in Mathematics. <br>I have an interest in full stack development and enjoy learning more. <br>In my free time, I enjoy traveling the world and playing volleyball.</p>
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<a href="#one" class="button scrolly">Learn More</a>
 							</ul>
 						</div>
 					</section>
@@ -125,52 +125,70 @@
 						<div class="inner">
 							<h2>My Skills</h2>
 							<div class="features">
-								<section>
-									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
+								<section class="thumbnail">
+									<img src="https://img.icons8.com/color/144/null/java-coffee-cup-logo--v1.png"/>
+									<h2>Java</h2>
 								</section>
-								<section>
-									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
+								<section class="thumbnail">
+									<img src="https://img.icons8.com/color/144/null/c-programming.png"/>
+									<h2>C</h2>
 								</section>
-								<section>
-									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
+								<section class="thumbnail">
+									<img src="https://img.icons8.com/color/144/null/c-plus-plus-logo.png"/>
+									<h2>C++</h2>
 								</section>
-								<section>
-									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
+								<section class="thumbnail">
+									<img src="https://img.icons8.com/color/144/null/python--v1.png"/>
+									<h2>Python</h2>
 								</section>
-								<section>
-									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
+								<section class="thumbnail">
+									<img src="assets\css\images\ocaml.png"/>
+									<h2>Ocaml</h2>
 								</section>
-								<section>
-									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
+								<section class="thumbnail">
+									<img src="assets\css\images\asm.png" style="height: 70%; width: 50%;"/>
+									<h2>Assembly</h2>
+								</section>
+								<section class="thumbnail">
+									<img src="https://img.icons8.com/color/144/null/typescript.png"/>
+									<h2>Typescript</h2>
+								</section>
+								<section class="thumbnail">
+									<img src="https://img.icons8.com/color/144/null/html-5--v1.png"/>
+									<h2>HTML5</h2>
+								</section>
+								<section class="thumbnail">
+									<img src="https://img.icons8.com/color/144/null/css3.png"/>
+									<h2>CSS</h2>
+								</section>
+								<section class="thumbnail">
+									<img src="https://img.icons8.com/color/144/null/javascript--v1.png"/>
+									<h2>Javascript</h2>
+								</section>
+								<section class="thumbnail">
+									<img src="https://img.icons8.com/color/144/null/git.png"/>
+									<h2>Git</h2>
+								</section>
+								<section class="thumbnail">
+									<img src="assets\css\images\puppet.png" style="height: 80%; width: 50%;"/>
+									<h2>Puppet</h2>
+								</section>
+								<section class="thumbnail">
+									<img src="https://img.icons8.com/color/144/null/mysql-logo.png"/>
+									<h2>MySQL</h2>
+								</section>
+								<section class="thumbnail">
+									<img src="https://img.icons8.com/color/144/null/docker.png"/>
+									<h2>Docker</h2>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
-							<div class="split style1">
-								<section>
-			
-								</section>
-								<section>
-									<ul class="contact">
-										
-									</ul>
-								</section>
-							</div>
+							<iframe src="assets\css\images\RESUME 2023.pdf" scrolling="no" style="height:50em; width:50em"></iframe>
 						</div>
 					</section>
 
