--- a/index.html
+++ b/index.html
@@ -34,15 +34,20 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h3>Hi I'm</h3>
+							<h3 style = "display: inline-block">Hi I'm</h3>
+							<img src = "assets\css\images\cat.gif" style="height:10%; width:10%; margin-left: 17em;; margin-bottom:-3.7em"/>
 							<div class="name">
 								<h1>Brandon Tran</h1>
 							</div>
 							<p>I'm a software engineer recently graduated from The University of Minnesota with a Major in Computer Science and a Minor in Mathematics. <br>I have an interest in full stack development and enjoy learning more. <br>In my free time, I enjoy traveling the world and playing volleyball.</p>
-								<a href="#one" class="button scrolly">Learn More</a>
+							<ul class="icons">
+								<li><a href="https://github.com/tran550" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/brandon-tran-110825228
+									" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 						</div>
 					</section>
+
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
@@ -123,7 +128,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>My Skills</h2>
+							<h1 style="text-align:center; text-decoration: underline">My Skills</h1>
 							<div class="features">
 								<section class="thumbnail">
 									<img src="https://img.icons8.com/color/144/null/java-coffee-cup-logo--v1.png"/>
@@ -188,7 +193,8 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<iframe src="assets\css\images\RESUME 2023.pdf" scrolling="no" style="height:50em; width:50em"></iframe>
+							<h1 style="text-align:center; text-decoration: underline">My Resume</h1>
+							<iframe src="assets\css\images\RESUME 2023.pdf#toolbar=0" scrolling="no" style="height:44.01em; width:34em; border:0; display:block; margin:auto;"></iframe>
 						</div>
 					</section>
 
