fixed projects width on mobile

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-1-tran550/" title="Spaceship Game" loading="lazy" style="height: 25em; width: 100em; margin-top:auto ; margin-bottom: auto;"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-1-tran550/" title="Spaceship Game" loading="lazy"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h3>Spaceship Minesweeper</h3>
@@ -64,7 +64,7 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-2-tran550/" title="Car Soccer Game" loading="lazy" style="height: 25em; width: 100em; margin-top:auto ; margin-bottom: auto;"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-2-tran550/" title="Car Soccer Game" loading="lazy"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h3>Car Soccer</h3>
@@ -76,7 +76,7 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-3-tran550/" title="Earthquake Simulator" loading="lazy" style="height: 25em; width: 100em; margin-top:auto ; margin-bottom: auto;"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-3-tran550/" title="Earthquake Simulator" loading="lazy"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h3>Earthquake Visualization</h3>
@@ -88,7 +88,7 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-4-tran550/" title="Motion Capture Simulator" loading="lazy" style="height: 25em; width: 100em; margin-top:auto ; margin-bottom: auto;"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-4-tran550/" title="Motion Capture Simulator" loading="lazy"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h3>Giraffe Motion Capture Dance Animations</h3>
@@ -100,7 +100,7 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-5-tran550/" title="Shading Simulator" loading="lazy" style="height: 25em; width: 100em; margin-top:auto ; margin-bottom: auto;"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-5-tran550/" title="Shading Simulator" loading="lazy"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h3>Shader Renderer</h3>
@@ -112,7 +112,7 @@
 							</div>
 						</section>
 						<section>
-							<iframe src="https://csci-4611-fall-2022.github.io/assignment-6-tran550/" title="Drawing Simulator" loading="lazy" style="height: 25em; width: 100em; margin-top:auto ; margin-bottom: auto;"></iframe>
+							<iframe src="https://csci-4611-fall-2022.github.io/assignment-6-tran550/" title="Drawing Simulator" loading="lazy"></iframe>
 							<div class="content">
 								<div class="inner">
 									<h3>3D Drawing Visualization</h3>
