--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 									<h2>Ocaml</h2>
 								</section>
 								<section class="thumbnail">
-									<img src="assets\css\images\asm.png" style="height: 70%; width: 50%;"/>
+									<img src="assets\css\images\asm.png"/>
 									<h2>Assembly</h2>
 								</section>
 								<section class="thumbnail">
@@ -175,7 +175,7 @@
 									<h2>Git</h2>
 								</section>
 								<section class="thumbnail">
-									<img src="assets\css\images\puppet.png" style="height: 80%; width: 50%;"/>
+									<img src="assets\css\images\puppet.png"/>
 									<h2>Puppet</h2>
 								</section>
 								<section class="thumbnail">
